# Cinematic_v2

./: .gitignore  README.md  package-lock.json  package.json
auth/: Dockerfile  package-lock.json  package.json
auth/prisma/: schema.prisma  seed.ts
auth/src/: app.module.ts  app.resolver.spec.ts  app.resolver.ts  app.service.ts  graphql.ts  main.ts  prisma.service.ts  schema.graphql  user.graphql
client/: README.md  angular.json  codegen.ts  karma.conf.js  package-lock.json  package.json  schema.graphql  tailwind.config.js  tsconfig.json
client/Cinematic_v1/: README.md  index.html
client/src/: index.html  styles.css
imdb-api/: README.md  package-lock.json  package.json
imdb-api/src/: imdb.controller.spec.ts  imdb.controller.ts  imdb.graphql  imdb.module.ts  imdb.service.ts  main.ts  types.d.ts
imdb-api/test/: app.e2e-spec.ts
imdb_service/: Cargo.toml
imdb_service/src/: lib.rs  main.rs
imdb_service/src/imdb/: mod.rs
imdb_service/src/schema/: mod.rs
movie-db/: Dockerfile  generate-typings.ts  package.json
movie-db/src/: constants.ts  main.ts  movie-db.module.ts  movie-db.resolver.spec.ts  movie-db.resolver.ts  movie-db.service.ts
movie_search/: Cargo.toml
movie_search/src/: auth.rs  graph.rs  main.rs  tests.rs
movie_search_service/: Cargo.toml  publish.sh  schema.graphql
movie_search_service/src/: client.rs  lib.rs  main.rs  resolvers.rs  schema.rs  tests.rs
movie_search_service/src/imdb/: mod.rs
movie_search_service/src/omdb/: mod.rs
movie_search_service/src/resolvers/: graph.rs  models.rs
movie_search_service/src/schema/: mod.rs
router/: config.yaml
server/: app.ts  context.ts  index.ts  movie.ts  package-lock.json  package.json  tsconfig.json
server/graphql/: index.ts  movie.ts  movieInput.ts
server_v1/: README.md  app.ts  package-lock.json  package.json  tsconfig.json
trailer-search/: go.mod  gqlgen.yml  server.go
trailer-search-service/: go.mod  go.sum  main.go  publish.sh
user-auth/: .gitignore  package-lock.json  package.json
(+162 files in other folders)
