[package]
name = "movie_search_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-graphql = "5.0.4"
async-graphql-actix-web = "5.0.4"
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.6"
serde = "1.0.147"
serde_json = "1.0.89"